force-app/main/default/objects/Organization__c/fields/Active_Contributors__c.field-meta.xml
<CustomField>
    <fullName>Active_Contributors__c</fullName>
    <label>Active Contributors</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>