force-app/main/default/objects/Organization__c/fields/Primary_Mentor__c.field-meta.xml
<CustomField>
    <fullName>Primary_Mentor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Mentor</label>
    <referenceTo>Mentor__c</referenceTo>
    <relationshipLabel>Organizations</relationshipLabel>
    <relationshipName>Organizations</relationshipName>
    <type>Lookup</type>
</CustomField>