force-app/main/default/objects/Organization__c/fields/Technology_Stack__c.field-meta.xml
<CustomField>
    <fullName>Technology_Stack__c</fullName>
    <label>Technology Stack</label>
    <length>255</length>
    <type>Text</type>
</CustomField>